--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Karina — Un Poema Diario</title>
+    <title>Para Karina de gabo</title>
     <style>
         * {
             margin: 0;
@@ -307,12 +307,12 @@
     <div id="lockScreen" class="lock-screen">
         <div class="lock-container">
             <pre class="ascii-art">
-  _  _  _  _  _  _  _  _  _  _
- | K | A | R | I | N | A | | L | O | V | E |
-  ¯  ¯  ¯  ¯  ¯  ¯  ¯  ¯  ¯  ¯
-                  / \
-                 | ♡ |
-                  \ /
+               _  _  _  
+              | K | G |
+                ¯  ¯ ¯  
+                 / \
+                | ♡ |
+                 \ /
             </pre>
             <form id="unlockForm" class="unlock-form">
                 <input type="password" id="passwordInput" class="password-input" placeholder="Ingresa la palabra mágica..." required>
