--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             </pre>
             <form id="unlockForm" class="unlock-form">
                 <input type="password" id="passwordInput" class="password-input" placeholder="Ingresa la palabra mágica..." required>
-                <button type="submit" class="unlock-btn">DESBLOQUEAR BENDICIÓN</button>
+                <button type="submit" class="unlock-btn">DESBLOQUEAME!!</button>
                 <p id="errorMessage" class="error-message"></p>
             </form>
         </div>
