--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             const inputPassword = passwordInput.value.trim();
 
             if (inputPassword === CORRECT_PASSWORD) {
-                errorMessage.textContent = '¡Bendición revelada!';
+                errorMessage.textContent = '¡Te amo ejje!';
                 
                 lockScreen.classList.add('fade-out');
 
