--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         ];
 
         // --- LÓGICA PRINCIPAL ---
-        const CORRECT_PASSWORD = 'Karina'; // Contraseña a usar
+        const CORRECT_PASSWORD = 'miamor'; // Contraseña a usar
         const TOTAL_POEMS = POEMS.length;
         const STORAGE_KEY_START_DATE = 'poemStartDate'; // Clave para guardar el día de inicio
         
@@ -572,7 +572,7 @@
                 }, 1000); 
                 
             } else {
-                errorMessage.textContent = 'Clave incorrecta. Intenta de nuevo. (Pista: es su nombre)';
+                errorMessage.textContent = 'Clave incorrecta. Intenta de nuevo. (Pista: eres tu)';
                 passwordInput.value = ''; 
                 passwordInput.focus(); 
             }
